--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 #game-board {
   display: none;
   position: center;
+  margin-top: 10em;
   width: 100%;
   height: 100%;
 
@@ -59,12 +60,35 @@
 
 }
 
-#game-board {
-  margin-top: 100px;
-}
 .board p{
   display:inline-block;
   margin-top: 5%;
   font-size: 15em;
   width: 100%;
+}
+#playerOneWinner {
+  display: none;
+  height:10%;
+  font-family: monospace;
+  font-size: 5em;
+  color: red;
+  text-align: center;
+}
+
+#playerTwoWinner {
+  display: none;
+  height:10%;
+  font-family: monospace;
+  font-size: 5em;
+  color: blue;
+  text-align: center;
+}
+
+#catsGame {
+  display: none;
+  height:10%;
+  font-family: monospace;
+  font-size: 5em;
+  color: green;
+  text-align: center;
 }
